# amos2026ss02-automated-thematic-analysis

./: .gitattributes  .gitignore  LEGAL_NOTICES.md  README.md  docker-compose.yml  requirements.txt  sbom.cdx.json  setup-ps51.ps1  setup.ps1  setup.sh  teardown.ps1  teardown.sh
Backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Backend/app/: config.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py  middleware.py
Backend/app/domain/: __init__.py  enums.py
Backend/app/llm/: __init__.py  client.py  pipelines.py  prompts.py  providers.py  traceable_prompts.py
Backend/app/models/: __init__.py  analysis.py  app_settings.py  base.py  code.py  codebook.py  codebook_generation_job.py  codes.py  demographic.py  ingestion.py  themes.py  traceable_analysis_job.py
Backend/app/routers/: __init__.py  codebook_applications.py  codebooks.py  demo.py  demographic.py  health.py  ingestion.py  settings.py  themes.py  traceable_analysis.py
Backend/app/schemas/: __init__.py  code.py  codebook.py  codebook_application.py  common.py  demographic.py  export_results.py  ingestion.py  interview.py  llm.py  settings.py  theme.py  theme_graph.py  theme_views.py  traceable_analysis.py  traceable_llm.py
Backend/app/services/: __init__.py  analysis_dependency_guard.py  app_settings.py  codebook.py  codebook_application.py  codebook_generation.py  (+23 more)
Backend/scripts/: alter_db.py  analyze_db_interview.py  apply_codebook.py  seed_demo_overlaps.py  test_nhr_fau_api.py
Backend/tests/: conftest.py  test_app_settings_service.py  test_codebook_application_jobs_api.py  test_codebook_application_runs_api.py  test_codebook_generation_api.py  test_codebook_generation_jobs_api.py  test_codebook_parser.py  test_codebook_pipeline.py  test_codebook_prompts.py  test_codebook_router.py  test_codebook_schemas.py  test_codebook_service.py  test_demographic_api.py  test_demographic_router_units.py  test_demographic_service_units.py  test_export_results.py  test_ingestion_api.py  test_ingestion_service.py  test_job_runner_reconciliation.py  test_langchain_export.py  test_llm_APIs.py  test_llm_academic_cloud.py  test_llm_client.py  test_llm_providers.py  test_llm_schemas.py  test_model_schema_alignment.py  test_pipeline_provider.py  test_quote_matching.py  test_quote_span_backfill.py  test_remote_embeddings.py  test_router_units.py  test_sanitize_research_query.py  test_settings_api.py  test_text_chunking.py  test_theme_demographic_breakdown_api.py  test_theme_demographic_breakdown_service.py  test_theme_frequency_api.py  test_theme_frequency_service.py  test_theme_graph_service.py  test_theme_quotes_service.py  (+6 more)
Frontend/: .env.example  Dockerfile  README.md  pyproject.toml
Frontend/tests/: conftest.py  test_analysis.py  test_backend_client.py  test_backend_client_validation.py  test_codebook_breakdown.py  test_codebook_controller.py  test_codebooks.py  test_demographic.py  test_error_handlers.py  test_ingestion.py  test_linking.py  test_main_controller.py  test_read_transcript.py  test_smoke.py
Frontend/web/: __init__.py  config.py
(+136 files in other folders)
