[project]
name = "frontend"
version = "0.1.0"
description = "Flask frontend for the automated thematic analysis platform."
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1",
    "jinja2>=3.1",
    "pydantic-settings>=2.6,<3.0",
    "python-dotenv>=1.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
